--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <div class="grid">
             
             </div>
+            <button onclick="startTimer()" id="start">Start</button>
+            <button onclick="stopTimer()" id="stop">Stop</button>
             <!-- <button>start</button> -->
         </div>
     </main>
